fixed dark mode and award section

--- a/src/components/annual_report/styles.scss
+++ b/src/components/annual_report/styles.scss
@@ -121,7 +121,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-55%, -70%);
+        transform: translate(-55%, -65%);
       }
 
       .image {
